<?xml version="1.0"?>
<package format="2">
  <name>niklasjang_path_planning</name>
  <version>0.0.0</version>
  <description>The niklasjang_path_planning package</description>
  <maintainer email="niklasjang@todo.todo">niklasjang</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry</build_depend>
  <build_depend>time</build_depend>
  <build_depend>gazebo_msgs</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry</build_export_depend>
  <build_export_depend>time</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry</exec_depend>
  <exec_depend>time</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
